--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --watchAll"
   },
   "author": "Alex González",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "29.2.3",
     "@types/node": "18.11.6",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "eslint": "8.26.0",
     "eslint-config-xo": "0.42.0",
+    "jest": "29.3.1",
+    "ts-jest": "29.0.3",
     "typescript": "4.8.4"
   }
 }
